--- a/app/views/asignaraulas/_form.html.erb
+++ b/app/views/asignaraulas/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_with(model: asignaraula, local: true) do |form| %>
-  <% if asignaraula.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(asignaraula.errors.count, "error") %> prohibited this asignaraula from being saved:</h2>
-
-      <ul>
-      <% asignaraula.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  
 
   <div class="field">
     <%= form.label :aula_id %>
@@ -22,8 +12,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :dia_id %>
-    <%= form.number_field :dia_id, id: :asignaraula_dia_id %>
+    <%= form.label :diadelasemana_id %>
+    <%= form.number_field :diadelasemana_id, id: :asignaraula_diadelasemana_id %>
   </div>
 
   <div class="actions">
