--- a/app/views/asignaraulas/index.html.erb
+++ b/app/views/asignaraulas/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= asignaraula.aula_id %></td>
         <td><%= asignaraula.cursoporcarrera_id %></td>
-        <td><%= asignaraula.dia_id %></td>
+        <td><%= asignaraula.diadelasemana_id %></td>
         <td><%= link_to 'Show', asignaraula %></td>
         <td><%= link_to 'Edit', edit_asignaraula_path(asignaraula) %></td>
         <td><%= link_to 'Destroy', asignaraula, method: :delete, data: { confirm: 'Are you sure?' } %></td>
